fcdev: the jar needs --enable-preview to run — make run and the doc pass it
The reactor compiles with preview features on; a plain java -jar fails on the
first preview-compiled class with UnsupportedClassVersionError. The Docker
entrypoints and the native build already pass the flag; the Makefile's
launcher and docs/fcdev.md did not.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>